# flowweaver

./: .gitignore  API_REFERENCE.md  BEST_PRACTICES.md  CHANGELOG.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_INDEX.md  EXECUTOR_REFACTORING_SUMMARY.md  FINAL_INTEGRATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_v0.3.1.md  LOCAL_TEST_RESULTS_v0.3.1.md  OPERATING_GUIDE.md  PHASE2_SUMMARY.md  PRODUCTION_READY.md  PRODUCTION_READY_v0.3.2.md  PRODUCTION_REFINEMENTS_v0.3.0.md  PROJECT_COMPLETION.md  README.md  REFINEMENTS_v0.3.1.md  demo_flowweaver.py  main.py  mypy.ini  pyproject.toml  quick_test.py  smoke_test.py  test_comprehensive_v0_3_0.py  test_final_polish.py  test_refinements.py  test_refinements_v0_3_1.py  test_sde2_complete.py  verify_refinements_v0_3_1.py  verify_system.py  workflow_state.db  workflow_state.json
.github/workflows/: publish.yml  tests.yml
examples/: async_aggregation.py  complex_sworkflow.py  complex_workflow.py  etl_pipeline.py  full_run.py  ml_pipeline.py  parallel_run.py  visualize_dag.py
src/flowweaver/: __init__.py  core.py  executors.py  storage.py  utils.py
src/flowweaver.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_comprehensive.py  test_core.py  test_real_world.py  test_stress.py
